--- a/manabu.css
+++ b/manabu.css
@@ -202,40 +202,22 @@ iframe {
 	text-decoration: underline;
 }
 
-/************************************
-** Twitterボックス
-************************************/
-.p-twitter-box{
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
-    margin:2rem auto;
-    max-width:500px;
-    width:100%;
-}
-.p-twitter-box .p-twitter-title{
-    color: #fff;
-    font-weight: 600;
-    letter-spacing: 1px;
-    padding: 0 2em 0;
-    font-size: 12px;
-}
-.p-twitter-box .twitter-tweet{
-    margin:0 !important;
-}
-.p-twitter-box p{
-    display:none;
-}
-/* ブルー */
-.p-twitter-box .p-twitter-blue{
-	    background: #1da1f2;
-}
 
 .tweets{
+	margin-top: 5vh;
 	margin-left: 3vw;
 }
 
 .tweet{
+	width: 25vw;
 	float: left;
-	margin-left: 3vw;
+	margin-left: 5vw;
+
+}
+
+.tweet img{
+	width: 25vw;
+	border:2px solid #000;
 }
 
 .link-buttons{
@@ -449,7 +431,7 @@ iframe {
 }
 
 .result{
-	height: 160vh;
+	height: 120vh;
 }
 
 .tweet:nth-child(1){
@@ -462,6 +444,9 @@ iframe {
 	width: 45vw;
 }
 
+.tweet img{
+	width: 40vw;
+}
 
 
 .topic{
@@ -603,11 +588,18 @@ iframe {
 	font-size: 35px;
 }
 
+.tweets{
+	margin-left: 0vw;
+}
 
 .tweet{
 	width: 90%;
 	height: 70vh;
-	margin-top:2vh;
+	margin:0vh 5vw 0 5vw
+;}
+
+.tweet img{
+	width: 90vw;
 }
 
 
