--- a/manabu.css
+++ b/manabu.css
@@ -285,11 +285,11 @@ iframe {
 }
 
 .instagram-btn{
-	background-image: url(img/instagram-link.png);
+	background-image: url(img/Instagram-link.png);
 }
 
 .book-btn{
-	background-image: url(img/book-link.jpg);
+	background-image: url(img/book-link.JPG);
 }
 
 footer{
